--- a/hello/templates/db.html
+++ b/hello/templates/db.html
@@ -5,7 +5,7 @@
   <div class="container">
 
 
-<h2>Page View Report</h2>
+<h2>Trying it out</h2>
 
 
 <ul>
@@ -15,6 +15,14 @@
 {% endfor %}
 
 </ul>
+<!-- 
+
+<ul>
+{% for items in ToDo %}
+    <li>{{ todo.title }}</li>
+{% endfor %}
+</ul>
+ -->
 
 </div>
 
